# voxnote

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  TranscritorLocal.spec  design-qa.md  pyproject.toml  run.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT.md  FRONTEND_TOOLING_STUDY.md  LANDING.md  MEETING_CAPTURE.md  MEETING_CAPTURE_STACK_FRONTEND.md  PRODUCT.md  REQUIREMENTS.md  ROADMAP.md  STATUS.md  TESTING.md  UX.md
installer/: TranscritorLocal.iss
landing/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
landing/src/: App.tsx  styles.css
landing/src/components/: SonicWaveform.tsx
scripts/: build.ps1  publish-release.ps1
src/transcritor/: __init__.py  app.py  audio.py  database.py  domain.py  engine.py  exporters.py  hardware.py  meeting.py  meeting_transcription.py  models.py  paths.py  qml_controller.py  resources.py  ui.py  updates.py  workers.py
src/transcritor/qml/: Main.qml  Theme.qml  qmldir
src/transcritor/qml/components/: NavItem.qml  VxButton.qml  VxCheckBox.qml  VxComboBox.qml  VxField.qml  VxProgressBar.qml  VxTextArea.qml
tests/: test_brand.py  test_database.py  test_domain.py  test_engine.py  test_exporters.py  test_hardware_models.py  test_icon_assets.py  test_meeting.py  test_qml_controller.py  test_typography.py  test_ui.py  test_updates.py
