[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "transcritor-local"
version = "0.1.1"
description = "Transcrição local de áudios longos para Windows x64"
requires-python = ">=3.12,<3.13"
dependencies = [
  "PySide6==6.11.1",
  "av==15.0.0",
  "faster-whisper==1.2.0",
  "psutil==7.0.0",
  "requests==2.32.4",
]

[project.optional-dependencies]
dev = [
  "mypy==1.17.1",
  "pyinstaller==6.15.0",
  "pytest==8.4.1",
  "pytest-qt==4.5.0",
  "ruff==0.12.7",
]

[project.scripts]
transcritor = "transcritor.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
qt_api = "pyside6"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["transcritor"]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]
